using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Common
{
    public static string speed = "Speed";
    public static string mouseScroll = "Mouse ScrollWheel";
    public static string enemy = "Enemy";
    public static string player = "Player";
    public static string normalAttack = "NormalAttack";
    public static string rangedAttack = "RangedAttack";
    public static string recoverHP = "RecoverHP";
    public static string mageAttack = "MageAttack";
    public static string getHit = "GetHit";
    public static string die = "Die";
}
